# butter-bot

./: .env.sample  .gitignore  Cargo.toml  README.md  dbd_codes.csv  dbd_codes.json  package-lock.json  package.json  tsconfig.json
src/: commands.ts  crawl.ts  main.rs  main.ts
src/commands/: common_games.rs  games.rs  mod.rs  poll.rs  random.rs  remind.rs  translate.rs  vote.rs
src/crawl/: dbd.rs  mod.rs
src/utils/: message.rs  mod.rs  parse.rs
